<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="starting_points_team_a">0</string>
    <string name="_3_points_team_a">+3 points</string>
    <string name="_2_points_team_a">+2 points</string>
    <string name="free_throw_team_a">free throw</string>
    <string name="team_b">Team B</string>
    <string name="starting_points_team_b">0</string>
    <string name="_3_points_team_b">+3 points</string>
    <string name="_2_points_team_b">+2 points</string>
    <string name="free_throw_team_b">free throw</string>
    <string name="reset">reset</string>
</resources>
